Fix bug where 3D button would appear disabled due to z-index interference with map

--- a/css/cyclestreets.css
+++ b/css/cyclestreets.css
@@ -60,7 +60,7 @@ button.mapboxgl-ctrl-geolocate:hover {transform: scale(1.1); background-color: #
 .mapboxgl-ctrl-bottom-left, .mapboxgl-ctrl-bottom-right, .mapboxgl-ctrl-top-left, .mapboxgl-ctrl-top-right {z-index: inherit;}
 #geolocate-button {display: none; top: 30px; right: 20px; line-height: 64px;}
 #geolocate-button img {margin-right: 4px;}
-#panning {top: 160px; right: 20px; line-height: 52px;}
+#panning {top: 160px; right: 20px; line-height: 52px; z-index:1;}
 #glasses-icon {top: 95px; right: 20px; line-height: 53px;}
 #browse-search-box {display: none; position: fixed; top: 95px; right: 20px; width: 50px; height: 50px; margin: 0; background: #f5f5f5; z-index: 19;}
 #browse-search-box.open {display: block; padding-left: 20px; padding-right: 50px; max-width: 300px; border-radius: 25px; line-height: 20px; box-shadow: 0 0 3px gray;}
@@ -315,7 +315,7 @@ input:checked + .slider:before { -webkit-transform: translateX(26px); -ms-transf
 .popup a.ui-button.close-button {position: absolute; top: 0; left: 0; margin: 10px; line-height: 60px; z-index: 3;}
 
 /* Photomap popup */
-.popup.photomap {perspective: 1000px; background-color: transparent; height: 550px; margin: 8% auto; z-index: 20;}
+.popup.photomap {perspective: 1000px; position: relative; background-color: transparent; height: 550px; margin: 8% auto; z-index: 20;}
 .popup.photomap .popup-card {border-radius: 20px; overflow-x: hidden; background-color: #fbf6f8;}
 .popup.photomap .loader {display: inline-block; position: fixed; margin: auto; width: 38px; height: 38px;}
 .popup.photomap a {position: absolute; bottom: 0; margin: 20px; padding: 0; line-height: 15px; color: #dc4f55; text-decoration: none;}
